syntax = "proto3";

package management;

message Mount {
    message ForwardMount {
        string source_path = 1;
    }

    string destination_path = 1;

    reserved 2 to 50;

    oneof mount {
        ForwardMount forward = 51;
    }
}

message CreateRequest {
    repeated Mount mounts = 2;
}

message CreateResponse {
    string uuid = 1;
}

message DestroyRequest {
    string uuid = 1;
}

message DestroyResponse {}

message RunCommandRequest {
    string uuid = 1;
    repeated string args = 2;
    map<string, string> env = 3;
    string work_path = 4;
}

message RunCommandResponse {
    int64 exit_code = 1;
    string stdout = 2;
    string stderr = 3;
}

service SandboxControl {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Destroy(DestroyRequest) returns (DestroyResponse);
    rpc RunCommand(RunCommandRequest) returns (RunCommandResponse);
}